--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,19 +1,19 @@
-# Plugin-Präfix
+# Plugin-Prefix
 prefix: "&7[&bServerGM&7] "
 
-# Nachrichten
+# Messages
 messages:
-  self: "&aDein Spielmodus wurde zu &e%gamemode% &ageändert."
-  other: "&a%spieler% wurde in den Spielmodus &e%gamemode% &agesetzt."
-  player_not_found: "&cSpieler nicht gefunden."
-  invalid_gamemode: "&cUngültiger Spielmodus. Benutze 0/1/2/3 oder s/c/a/sp."
-  no_permission: "&cDu hast keine Berechtigung dafür."
-  must_specify_player: "&cDu musst einen Spieler angeben (Konsole)."
-  command_disabled: "&cDieser Befehl ist deaktiviert."
-  reload_success: "&aKonfiguration erfolgreich neu geladen."
-  reload_no_permission: "&cDu hast keine Berechtigung, die Konfiguration neu zu laden."
+  self: "&aYou Gamemode set to Gamemode &e%gamemode%"
+  other: "&aSet %spieler% Gamemode to &e%gamemode%"
+  player_not_found: "&cPlayer not found"
+  invalid_gamemode: "&cUnkown Gamemode. Use 0/1/2/3 or s/c/a/sp."
+  no_permission: "&cYou need Permission for Gamemode Switching"
+  must_specify_player: "&cYou need to select a Player (Console)."
+  command_disabled: "&cThis Command is not Enabled"
+  reload_success: "&aConfig reloaded"
+  reload_no_permission: "&cYou cant reload the Config"
 
-# Aktivierte Befehle
+# Enable Commands
 enabled_commands:
   gm: true
   gamemode: true
